--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^2.9.4",
     "d3": "^6.5.0",
     "formik": "^2.2.6",
+    "immer": "^9.0.12",
     "json-server": "^0.17.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
@@ -28,6 +29,7 @@
     "reactjs-toastr": "^1.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.1.5",
     "toastr": "^2.1.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.0",
