--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.1.5",
+    "styled-components": "^5.3.3",
     "toastr": "^2.1.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.0",
